marketing/corporate/deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: corporate-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: nafuralabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: corporate-web
                port:
                  number: 80
